# skill-labs

.github/workflows/: cleanup-stale-branches.yml
ai-ml/langchain/: 01_anthropic_chat.py
ai-ml/machine-learning/transformers/: hugging_face.ipynb
ai-ml/machine-learning/word2vec/: example.ipynb
machine_learning/: pyproject.toml
machine_learning/02-word-embedding/03-word2vec/: word2vec_01.ipynb
python/basics/data-structures/: 01_list.py
python/basics/iterators/: 01_builtin_iterator.py  02_custom_iterator.py
python/web/fastapi/: 01_hello_world.py  02_user_crud.py  03_local_file_share.py  user.json
sql/: employees_schema.sql
testing/aws-mocking/: dynamodb_example.py  requirements.txt
testing/playwright/: README.md
testing/selenium/: pom.xml
testing/selenium/src/test/java/flipkart/: FirstExample.java
tools/claude-code/: CLAUDE.md
tools/claude-code/.claude/: settings.json
tools/terminal/: iTerm.md
